# bix_tecnologia

./: .env_example  .gitignore  README.md  main.py  pyproject.toml
extract/API/: api_collector.py
extract/ParquetFile/: parquet_collector.py
extract/PostgreSQL/: postgre_collector.py
transform/: dbt_project.yml
transform/models/marts/: dim_categorias.sql  dim_categorias.yml  dim_funcionarios.sql  dim_funcionarios.yml  fact_vendas.sql  fact_vendas.yml
transform/models/staging/: source.yml  stg_categorias.sql  stg_funcionarios.sql  stg_vendas.sql
