[tool.poetry]
name = "bix tecnologia"
version = "0.1.0"
description = "Teste técnico da BIX para Eng. de Dados Jr"
authors = ["teodoromatheus <matheusteodoro.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
