[tool.poetry]
name = "bix tecnologia"
version = "0.1.0"
description = "Teste técnico da BIX para Eng. de Dados Jr"
authors = ["teodoromatheus <matheusteodoro.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
psycopg2 = "^2.9.9"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
google-cloud = "^0.34.0"
google-api-python-client = "^2.120.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
pandas-gbq = "^0.21.0"
httpx = "^0.27.0"
dbt-core = "^1.7.9"
dbt-bigquery = "^1.7.6"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
